[package]
name = "mould-client"
version = "0.2.1"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]

[dependencies]
log = "0.3.7"
error-chain = "0.10.0"
serde = "1.0.2"
serde_json = "1.0.1"
futures = "0.1.13"
futures-state-stream = "0.1"
tokio-core = "0.1.6"
tokio-io = "0.1.1"
tungstenite = "0.2.0"
tokio-tungstenite = { git = "https://github.com/snapview/tokio-tungstenite" }
url = "1.4.0"
mould = {  git = "https://github.com/DenisKolodin/mould" }
